update col picker

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -3,7 +3,7 @@
       <ul class="itemBoxHeader__row">
         <li class="itemBoxHeader__cell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxHeader__cellInner">
-            <h2 class="itemBoxHeader__title">Lorem ipsum dolor sit amet</h2>
+            <h2 class="itemBoxHeader__title fnt--h2">Lorem ipsum dolor sit amet</h2>
           </div>
         </li>
         <li class="itemBoxHeader__cell" style="flex-grow: 0;" data-flex="0">
