--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -4,7 +4,7 @@
       <span class="item-header__type item-header__type--bug fnt--label">Bug</span>
       <span class="item-header__id fnt">391441</span>
     </div>
-    <h2 title="PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END">PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END</h2>
+    <h2 class="fnt--h2" title="PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END">PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END</h2>
   </div>
 
   <div class="item-header__actions">
